# Zilli

./: .dockerignore  .gitignore  AGENTS.md  DEVELOPMENT_LOG.md  Dockerfile  MEMORY.md  NG对比.md  README.md  Zilli file structure.md  Zilli-Hermes对比.md  Zilli工程文件.md  docker-compose.yml  executor_only_report.json  install.sh  pyproject.toml  swe_audit_report.md  检查.md
docs/: explanation-architecture.md  howto-common-tasks.md  reference-distillation.md  tutorial-getting-started.md
examples/: run_distillation_and_scheduler.py
hermes_ng/: cli.py  run_training.py
hermes_ng/configs/: training_config.yaml
hermes_ng/data/: __init__.py  experience_replay.py
hermes_ng/envs/: __init__.py  mock_env.py
hermes_ng/evolution/: __init__.py  cli.py  skill_evolution.py
hermes_ng/infra/: __init__.py  async_scheduler.py  length_controller.py
hermes_ng/learner/: __init__.py  continuous_learner.py
hermes_ng/rewards/: __init__.py  verifiable_rewards.py
hermes_ng/schema/: __init__.py  actions.py
hermes_ng/scripts/: run_evolution.sh
hermes_ng/tasks/: __init__.py
hermes_ng/training/: __init__.py  cispo.py  rl_trainer.py
scripts/: benchmark.py  swe_audit.py
tests/: test_audit.py  test_backends.py  test_benchmark.py  test_cache.py  test_checkpoint.py  test_cli_distill.py  test_config.py  test_context_curator.py  test_core_agent.py  test_core_runner.py  test_cost_controller.py  test_dag.py  test_device_utils.py  test_distillation_dsl.py  test_distillation_gpu.py  test_executor_evaluator.py  test_failure_analyzer.py  test_frequency_controller.py  test_fusion.py  test_harness_orchestrator.py  test_hermes_ng.py  test_industry.py  test_logging.py  test_loops.py  test_losses.py  test_meta_evaluator.py  test_models.py  test_moo.py  test_multi_round.py  test_pipeline.py  test_planner_budget.py  test_privacy.py  test_privacy_sandbox.py  test_profiler.py  test_routing.py  test_security.py  test_security_sanitizer.py  test_server.py  test_sota_scheduler.py  test_streaming.py  (+4 more)
zilli/: __init__.py  cli.py  dashboard_app.py  run_training.py
zilli-rs/: .gitignore  Cargo.toml  MEMORY.md  REVIEW.md  deny.toml
zilli-rs/.github/workflows/: ci.yml
zilli-rs/src/: cli.rs  lib.rs  main.rs
zilli-rs/src/adaptive/: mod.rs  sota_scheduler.rs
zilli-rs/src/audit/: compliance.rs  logger.rs  mod.rs
zilli-rs/src/cache/: engine.rs  mod.rs
zilli-rs/src/configs/: loader.rs  mod.rs
zilli-rs/src/data/: experience_replay.rs  mod.rs  trajectory_cleaner.rs
zilli-rs/src/envs/: cost_controller.rs  mock_env.rs  mod.rs
zilli-rs/src/evolution/: engine.rs  mod.rs
zilli-rs/src/hybrid/: executor.rs  gatekeeper.rs  mod.rs
zilli-rs/src/industry/: mod.rs  workflows.rs
zilli-rs/src/infra/: async_scheduler.rs  clock.rs  device_utils.rs  length_controller.rs  logging.rs  mod.rs
zilli-rs/src/learner/: continuous_learner.rs  mod.rs
zilli-rs/src/loops/: memory.rs  mod.rs  runner.rs  trigger.rs  verification.rs
zilli-rs/src/models/: config.rs  mod.rs  registry.rs
zilli-rs/src/models/backends/: llamacpp.rs  mod.rs  ollama.rs  vllm.rs
zilli-rs/src/privacy/: classifier.rs  consent.rs  engine.rs  mod.rs  policy.rs  reid.rs
zilli-rs/src/rewards/: mod.rs  verifiable_rewards.rs
zilli-rs/src/routing/: classifier.rs  mod.rs  router.rs
zilli-rs/src/schema/: actions.rs
zilli-rs/src/security/: isolation.rs  mod.rs  output_sanitizer.rs  patterns.rs  pii.rs  sanitizer.rs
zilli-rs/src/server/: app.rs  mod.rs  schemas.rs
zilli-rs/src/task/: mod.rs  runner.rs
zilli-rs/src/training/: champion_challenger.rs  cispo.rs  config.rs  data.rs  distillation.rs  grpo.rs  mod.rs  rl_trainer.rs
zilli/adaptive/: __init__.py  moo.py  sota_scheduler.py
zilli/audit/: __init__.py  compliance.py  logger.py
zilli/cache/: __init__.py  engine.py
zilli/core/: agent.py  (+1 more)
(+112 files in other folders)
