[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-ng"
version = "0.1.0"
description = "Hermes-NG Agent tool framework"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "dspy-ai>=2.5",
]
optional-dependencies = {train = ["torch>=2.1", "transformers>=4.36"], dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]}

[project.scripts]
hermes-ng = "hermes_ng.cli:main"
hermes-evolve = "hermes_ng.evolution.cli:main"

[tool.setuptools.packages.find]
include = ["hermes_ng*"]
