[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zilli"
version = "0.1.0"
description = "Zilli: self-evolving AI agent framework"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "dspy-ai>=2.5",
]
optional-dependencies = {train = ["torch>=2.1", "transformers>=4.36"], dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]}

[project.scripts]
zilli = "zilli.cli:main"
zilli-evolve = "zilli.evolution.cli:main"

[tool.setuptools.packages.find]
include = ["zilli*"]
