[package]
name = "zilli"
version = "0.3.0"
edition = "2024"
description = "Zilli: self-evolving AI agent framework for autonomous tool development"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
clap = { version = "4", features = ["derive"] }
thiserror = "2"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
regex = "1"
lru = "0.12"
sha2 = "0.10"
hex = "0.4"
parking_lot = "0.12"
futures = "0.3"
rand = "0.8"
async-trait = "0.1"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
mockall = "0.13"
